--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ OPENCTI_BASE_URL=http://localhost:8080
 OPENCTI_URL=http://localhost:8080
 OPENCTI_TOKEN=
 OPENCTI_HEALTHCHECK_ACCESS_KEY=
+OPENCTI_SECRET=
 
 # Infrastructure
 MINIO_ROOT_USER=
