--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,7 @@ services:
       - NODE_OPTIONS=--max-old-space-size=8096
       - APP__PORT=8080
       - APP__BASE_URL=${OPENCTI_BASE_URL}
+      - APP__SECRET=${OPENCTI_SECRET} 
       # === LOCAL ADMIN (BREAK-GLASS) ===
       - APP__ADMIN__EMAIL=${OPENCTI_ADMIN_EMAIL}
       - APP__ADMIN__PASSWORD=${OPENCTI_ADMIN_PASSWORD}
