Update OPENCTI_BASE_URL in .env.example and docker-compose.yml for consistency and docker compose mapping

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 OPENCTI_ADMIN_EMAIL=
 OPENCTI_ADMIN_PASSWORD=
 OPENCTI_ADMIN_TOKEN=
-OPENCTI_BASE_URL=http://localhost:8080
+OPENCTI_BASE_URL=http://opencti:8080
 OPENCTI_URL=http://localhost:8080
 OPENCTI_TOKEN=
 OPENCTI_HEALTHCHECK_ACCESS_KEY=
